--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,18 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="DERBY_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/poi-3.9-20121203.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/poi-ooxml-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/poi-ooxml-schemas-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/poi-examples-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/poi-excelant-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/poi-scratchpad-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/ooxml-lib/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/ooxml-lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/jasonkarp/Documents/Warwick/Third_Year_Project/poi-3.9/ooxml-lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
